# bat6

./: .gitignore  README.md  stats
code/smooth/: smooth.pro
code/smooth/forms/: bat6window.ui  mainwindow.ui
code/smooth/qt/: bat6window.cpp  bat6window.h  bat6window.ui  cell.cpp  cell.h  cell.ui  cellwidget.ui  console.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pvmodel.cpp  pvmodel.h  smooth.pro
code/smooth/qt/models/: pvarray.cpp  pvarray.h  pvcell.cpp  pvcell.h  pvchain.cpp  pvchain.h  pvmodel.cpp  pvmodel.h
code/smooth/qt/widgets/: bat6widget.cpp  bat6widget.h  cellwidget.cpp  cellwidget.h  consolewidget.h  graphwidget.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h
code/smooth/smooth/: bat6window.cpp  bat6window.h  bat6window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  smooth.pro
code/smooth/src/: bat6window.cpp
code/uc/: .gitignore
code/uc/PV-Simulator.X/: .gitignore
code/uc/PV-Simulator.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
code/uc/include/: buck.h  button.h  event.h  hw.h  init.h  lcd.h  uart.h
code/uc/include/core/: event.h
code/uc/include/drv/: buck.h  button.h  hw.h  init_hw.h  leds.h  timer.h
code/uc/include/usr/: menu.h
code/uc/include/util/: linked_list.h  static_assert.h
code/uc/src/: buck.c  button.c  cn.c  event.c  init.c  lcd.c  leds.c  main.c  uart.c
code/uc/src/core/: event.c
code/uc/src/drv/: buck.c  button.c  hw.c  init_hw.c  lcd.c  leds.c  timer.c  uart.c
code/uc/src/usr/: pv_model.c
code/uc/src/util/: linked_list.c
doc/: .gitignore
doc/documentation/: documentation.aux  documentation.out  documentation.tex  documentation.toc
doc/documentation/bibliography/: bibliography.bib
doc/documentation/preamble/: packages.tex  title.tex
doc/documentation/sections/: abstract.tex  appendix.tex  aufgabenstellung.tex  components.tex  concept.tex  conclusions.tex  firmware.tex  frontend.tex  grundkonzept.tex  introduction.tex  pcb.tex  software.tex  verification.tex
doc/documentation/sections/components/: drehtaster.tex  dspic.tex  lt3741.tex  netzteil.tex  psu.tex  rails.tex
doc/documentation/titlepage/: titlepage.tex
doc/doxygen/firmware/: Doxyfile
doc/gource/: capture.sh
doc/logo/: logo.xcf  logo_grey_black.xcf
doc/pflichtenheft/: .gitignore  grob-blockdiagramm.odp  grobschaetzung-preis.ods  pflichtenheft.tex  technische  daten.txt
doc/presentation/: main.aux  main.nav  main.out  main.tex  main.toc
doc/presentation/libreoffice/: presentation.odp
doc/smps-dimensionierung/: LT3741-calculations.ods  scipy-LT3741.py
doc/state-machine/: state-machine.tex
hardware/pcb/bom/: bestellung1.xlsx  bom.CSV  bom.ods
hardware/price-downloader/: price-downloader.py
hardware/protel/: UART.SCHDOC
housing/: frontplate.tex
mechanical/housing/images/: faceplate.tex
pcb/final/: order-info.txt
pcb/final/bom/: bom.ods  bom.xlsx
pcb/final/pcb/: pv-simulator.PCBDOC
pcb/protel/: .gitignore  Buck.SCHDOC  Buttons.SCHDOC  PCB.PCBDOC  PV-Simulator.PRJPCB  PV-Simulator.SCHDOC  Rails.SCHDOC  Sheet1.SCHDOC  UART.SCHDOC  uC.SCHDOC
pm/: meeting-15-22-23.md
pm/pflichtenheft/: .gitignore
pm/reality-check/: reality-check.odp
sim/: .gitignore
sim/ltspice/lt3741_ripple/: ripple.asc
sim/ltspice/lt3741_transients/: transients.asc
sim/ltspice/uvlo/: uvlo.asc
sim/matlab/PV/: Kurve.m
software/dspic/: README.md  clean.sh
software/dspic/PV-Simulator.X/: .gitignore
software/dspic/PV-Simulator.X/nbproject/: configurations.xml
software/dspic/include/core/: event.h  static_assert.h  string.h
software/dspic/include/drv/: buck.h  button.h  hw.h  lcd.h  leds.h  timer.h  uart.h
software/dspic/include/usr/: menu.h  panels_db.h  pv_model.h  solar_panels.h
software/dspic/src/: main.c
software/dspic/src/core/: event.c  string.c
software/dspic/src/drv/: buck.c  button.c  hw.c  lcd.c  leds.c  timer.c  uart.c
software/dspic/src/usr/: menu.c  panels_db.c  pv_model.c  solar_panels.c
software/ft232r_prog/: .gitignore
software/smooth/qt/: bat6widget.ui  cellwidget.ui  smooth.pro
software/smooth/qt/models/: COMInterface.cpp  COMInterface.h  COMPort.cpp  COMPort.h  COMUnix.cpp  COMUnix.h  comport.cpp  comport.h  dummycurrentandvoltagesensor.cpp  dummycurrentandvoltagesensor.h  pvarray.cpp  pvarray.h  pvcell.cpp  pvcell.h  pvchain.cpp  pvchain.h
software/smooth/qt/plot/: characteristicscurve3d.cpp  characteristicscurve3d.h  curve2dbase.h  curve3dbase.h  ivcharacteristicscurve.cpp  ivcharacteristicscurve.h  ivcharacteristicscurve3d.cpp  ivcharacteristicscurve3d.h  powercurve.cpp  powercurve.h  powercurve3d.cpp  powercurve3d.h  pvmodelfunctionbase.cpp  pvmodelfunctionbase.h
software/smooth/qt/qaccordion/: clickableframe.cpp  contentpane.cpp  contentpane.h  qaccordion.cpp  qaccordion.h
software/smooth/qt/tools/: Lambda.h
software/smooth/qt/widgets/: PVArrayPlot.cpp  PVArrayPlot.h  bat6widget.cpp  bat6widget.h  cellwidget.cpp  cellwidget.h  characteristiccurve2dwidget.cpp  characteristiccurve2dwidget.h  characteristiccurve3dwidget.cpp  characteristiccurve3dwidget.h  characteristicscurve2dwidget.cpp  characteristicscurve2dwidget.h  characteristicscurve3dwidget.cpp  characteristicscurve3dwidget.h  consolewidget.cpp  consolewidget.h  graphwidget.h  mainwindow.cpp  (+1 more)
software/unit-tests/: .gitignore  CMakeLists.txt
software/unit-tests/dspic_emulation/: CMakeLists.txt
software/unit-tests/dspic_emulation/include/: compiler_symbols.h  libq.h  p33EP16GS506.h
software/unit-tests/dspic_emulation/src/: compiler_symbols.cpp  libq.cpp  p33EP16GS506.cpp
software/unit-tests/src/: dspic_environment.cpp
(+9 files in other folders)
